clean up solution

--- a/Tutorials/MyTestApp/GraphTemplates.xaml
+++ b/Tutorials/MyTestApp/GraphTemplates.xaml
@@ -138,6 +138,8 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="Foreground"
+                Value="Black" />
     </Style>
 
 </ResourceDictionary>
