--- a/Source/Graph#.Sample/App.xaml
+++ b/Source/Graph#.Sample/App.xaml
@@ -1,10 +1,7 @@
 ﻿<Application x:Class="GraphSharp.Sample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:rb="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"
-    StartupUri="MainWindow.xaml"
-	xmlns:expression="clr-namespace:System.Windows.Controls.Theming;assembly=System.Windows.Controls.Theming.ExpressionDark"
-	xmlns:WPFExtensions_Controls="clr-namespace:WPFExtensions.Controls;assembly=WPFExtensions">
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     	<ResourceDictionary>
