added support for curved and undirected edges

--- a/Source/Graph#.Controls/Themes/Generic.xaml
+++ b/Source/Graph#.Controls/Themes/Generic.xaml
@@ -39,6 +39,8 @@
                                                  Path="Target.ActualHeight" />
                                         <Binding RelativeSource="{RelativeSource TemplatedParent}"
                                                  Path="RoutePoints" />
+										<Binding RelativeSource="{RelativeSource TemplatedParent}"
+												 Path="IsDirected" />
                                     </MultiBinding>
                                 </PathGeometry.Figures>
                             </PathGeometry>
