--- a/Source/Graph#.Controls/Themes/Generic.xaml
+++ b/Source/Graph#.Controls/Themes/Generic.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					xmlns:behaviors="clr-namespace:GraphSharp.Behaviors"
+                    xmlns:behaviors="clr-namespace:GraphSharp.Behaviors"
                     xmlns:converters="clr-namespace:GraphSharp.Converters"
                     xmlns:controls="clr-namespace:GraphSharp.Controls">
-
     <converters:EdgeRouteToPathConverter x:Key="RouteToPathConverter" />
     <converters:PointArrayToString x:Key="PointsToStringConverter" />
 
@@ -39,8 +38,8 @@
                                                  Path="Target.ActualHeight" />
                                         <Binding RelativeSource="{RelativeSource TemplatedParent}"
                                                  Path="RoutePoints" />
-										<Binding RelativeSource="{RelativeSource TemplatedParent}"
-												 Path="IsDirected" />
+                                        <Binding RelativeSource="{RelativeSource TemplatedParent}"
+                                                 Path="IsDirected" />
                                     </MultiBinding>
                                 </PathGeometry.Figures>
                             </PathGeometry>
@@ -103,7 +102,10 @@
                             BorderThickness="{TemplateBinding BorderThickness}"
                             Background="{TemplateBinding Background}"
                             ToolTip="{TemplateBinding ToolTip}">
-                        <ContentPresenter Content="{TemplateBinding Vertex}" />
+                        <Border.LayoutTransform>
+	                        <RotateTransform Angle="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Angle}" />
+                        </Border.LayoutTransform>
+						<ContentPresenter Content="{TemplateBinding Vertex}" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
